Fix collapse handle style
Collapse handles should not be transparent.
Also, hover color was a little too dark compared to the
regular hover color.

--- a/eclipse-scout-core/src/style/colors.less
+++ b/eclipse-scout-core/src/style/colors.less
@@ -112,7 +112,7 @@
 @highlight-inverted-background-color: @highlight-color;
 @hover-color: @accent-color-3;
 @hover-background-color: fade(@palette-black, 8%); // Use fade to make it more independent from the background color
-@hover-solid-background-color: @palette-gray-4;
+@hover-solid-background-color: darken(@palette-gray-3, 3%);
 @icon-color: @text-color;
 @icon-disabled-color: @palette-gray-5;
 @icon-inverted-color: @palette-white;
@@ -204,7 +204,7 @@
 @closer-color: @icon-light-color;
 @closer-hover-color: @icon-light-hover-color;
 @collapse-handle-active-background-color: @active-solid-background-color;
-@collapse-handle-background-color: @button-background-color;
+@collapse-handle-background-color: @background-color;
 @collapse-handle-border-color: @palette-gray-4;
 @collapse-handle-color: @palette-gray-8;
 @collapse-handle-hover-background-color: @hover-solid-background-color; // Don't use @hover-background-color here because it would shine through
